scss/_nav.scss
/* --- Nav Menu Style --- */
.menu {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  z-index: 20;
  position: fixed;
  pointer-events: none;
  mix-blend-mode: difference;
  overflow-y: auto;
  & > * {
    margin: 40px 30px 20px;
    cursor: pointer;
    pointer-events: auto;
  }
  .menu-btn {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 30px;
    margin: 15px 30px;
    & > * {
      color: #fff;
      mix-blend-mode: difference;
    }
    .menu-text {
      font-size: 15px;
      font-family: Sequel, sans-serif !important;
      font-weight: 100;
      margin: 0 7px 3px 0;
    }
    #hamburger {
      width: 28px;
      height: 25px;
      position: relative;
      -webkit-transform: rotate(0deg);
      -moz-transform: rotate(0deg);
      -o-transform: rotate(0deg);
      transform: rotate(0deg);
      -webkit-transition: 0.5s ease-in-out;
      -moz-transition: 0.5s ease-in-out;
      -o-transition: 0.5s ease-in-out;
      transition: 0.5s ease-in-out;
      cursor: pointer;
      span {
        display: block;
        position: absolute;
        height: 6.3px;
        width: 100%;
        background: $light;
        opacity: 1;
        left: 0;
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
        -webkit-transition: 0.25s ease-in-out;
        -moz-transition: 0.25s ease-in-out;
        -o-transition: 0.25s ease-in-out;
        transition: 0.25s ease-in-out;
        &:nth-child(1) {
          top: 0px;
        }
        &:nth-child(2),
        &:nth-child(3) {
          top: 8px;
        }
        &:nth-child(4) {
          top: 16px;
        }
      }
    }
    #hamburger.open {
      span {
        &:nth-child(1) {
          top: 8px;
          width: 0%;
          left: 50%;
        }
        &:nth-child(2) {
          -webkit-transform: rotate(45deg);
          -moz-transform: rotate(45deg);
          -o-transform: rotate(45deg);
          transform: rotate(45deg);
        }
        &:nth-child(3) {
          -webkit-transform: rotate(-45deg);
          -moz-transform: rotate(-45deg);
          -o-transform: rotate(-45deg);
          transform: rotate(-45deg);
        }
        &:nth-child(4) {
          top: 8px;
          width: 0%;
          left: 50%;
        }
      }
    }
  }
}

.hidden-header {
  z-index: 10;
  position: fixed;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  height: 100%;
  width: 40vw;
  visibility: hidden;
  background-color: $dark;
  right: 0;
  box-shadow: -7px 0px 10px rgba(0, 0, 0, 0.25);
}

.sidenav {
  margin: 100px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  ul {
    width: 35vw;
  }
  li {
    list-style: none;
    padding: 20px 0 20px 15px;
    border-bottom: 1px solid $darker-light;
    a {
      color: $light;
      text-decoration: none;
      font-weight: 600;
    }
  }
}

/*.sidenav ul > li:nth-child(1) {
    background-color: $light);
}*/

/*.sidenav li:nth-child(1) a {
    color: $dark);
}*/

.sidenav li:hover {
  cursor: pointer;
  background-color: $light-dark;
}

.header-social-icons {
  display: flex;
  justify-content: center;
  color: $light;
}

.header-social-icons a {
  margin: 0 10px 40px;
}

.header-social-icons a,
i {
  color: $darker-light;
  isolation: isolate;
}

.header-social-icons a,
i:hover {
  cursor: pointer;
  color: $light;
}

/*--- Media Queries ---*/
@media all and (max-width: 1024px) {
  .menu {
    width: 100%;
    margin: 0 auto;
  }

  .menu > * {
    margin: 30px 20px;
  }
  .menu {
    .menu-btn {
      margin: 30px 20px 40px;
    }
  }
  .hidden-header {
    width: 100vw;
    box-shadow: none;
  }

  .sidenav ul {
    width: 80vw;
  }
}

